<resources>
    <string name="app_name">Trail Sense</string>
    <string name="action_navigation">Navigation</string>
    <string name="action_weather">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="compass_alt">Compass</string>
    <string name="direction_arrow_desc">Direction Arrow</string>
    <string name="location_unknown">Location unknown</string>
    <string name="destination_star_desc">Destination</string>
    <string name="create_beacon_title">Place a beacon</string>
    <string name="beacon_name_hint">Name</string>
    <string name="beacon_latitude_hint">Latitude</string>
    <string name="beacon_longitude_hint">Longitude</string>
    <string name="beacon_use_current_location">Use current location</string>
    <string name="beacon_title">Beacons</string>
    <string name="dialog_ok">OK</string>
    <string name="delete_beacon_alert_title">Delete beacon</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="air_pressure_label">Pressure</string>
    <string name="pressure_chart_title">Pressure History</string>
    <string name="action_astronomy">Astronomy</string>
    <string name="sunrise_label">Sunrise</string>
    <string name="sunset_label">Sunset</string>
    <string name="noon_label">Noon</string>
    <string name="until_sunrise_label">Time until sunrise</string>
    <string name="until_sunset_label">Time until sunset</string>


    <string name="pref_use_true_north_title">True North</string>
    <string name="pref_use_true_north">use_true_north</string>
    <string name="pref_use_sea_level_pressure_title">Sea level pressure</string>
    <string name="pref_use_sea_level_pressure">use_sea_level_pressure</string>
    <string name="pref_send_storm_alert">send_storm_alert</string>
    <string name="pref_units_header">Units</string>
    <string name="pref_distance_units_title">Distance</string>
    <string name="pref_pressure_units_title">Pressure</string>
    <string name="pref_pressure_units">pressure_units</string>
    <string name="pref_distance_units">distance_units</string>
    <string name="pref_navigation_header">Navigation</string>
    <string name="pref_weather_header">Weather</string>
    <string name="pref_send_storm_alerts_title">Storm alerts</string>
    <string name="pref_just_sent_alert">just_sent_alert</string>
    <string name="pref_astronomy_header">Astronomy</string>
    <string name="pref_use_24_hour">use_24_hour</string>
    <string name="pref_use_24_hour_title">Use 24-hour format</string>
    <string name="pref_altitude_mode">altitude_mode</string>
    <string name="pref_altitude_mode_title">Altimeter</string>
    <string name="pref_sun_time_mode">sun_time_mode</string>
    <string name="pref_sun_time_mode_title">Sunrise / sunset times</string>
    <string name="weather_improving_fast">Improving very soon</string>
    <string name="weather_improving_slow">Improving soon</string>
    <string name="weather_worsening_slow">Worsening soon</string>
    <string name="weather_worsening_fast">Worsening very soon</string>
    <string name="weather_storm_incoming">Storm incoming</string>
    <string name="weather_not_changing">Not changing soon</string>
    <string name="forecast_improving">Possibly improving later</string>
    <string name="forecast_worsening">Possibly worsening later</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="moon">Moon</string>
    <string name="no_beacons">No beacons</string>
    <string name="onboarding_compass">Place beacons and navigate back to them</string>
    <string name="onboarding_weather">Get hyperlocal weather forecasts</string>
    <string name="onboarding_weather_no_internet">* does not use an Internet connection</string>
    <string name="onboarding_astronomy">Know when the sun/moon will rise and set</string>
    <string name="onboarding_background_location">Trail Sense needs permission to use your GPS</string>
    <string name="onboarding_location_weather">Allows for more accurate weather forecasts (adjusts for altitude)</string>
    <string name="onboarding_location_navigation">Allows you to navigate to beacons</string>
    <string name="onboarding_location_astronomy">Allows you to see sun/moon rise and set times</string>
    <string name="onboarding_location_privacy">Trail Sense respects your privacy - location data never leaves your device</string>
    <string name="onboarding_location_all_time">Please select \'Allow all the time\' from the permission dialog</string>
    <string name="continue_button">CONTINUE</string>
    <string name="pref_onboarding_completed">onboarding_completed</string>
    <string name="nature">Nature</string>
    <string name="animal_activity_low">Low</string>
    <string name="animal_activity_moderate">Moderate</string>
    <string name="animal_activity_high">High</string>
    <string name="animal_activity_label">Animal Activity</string>
    <string name="solunar_major">Major</string>
    <string name="solunar_minor">Minor</string>
</resources>
